--- a/Kudu-HelloWorld/Kudu-HelloWorldWebApp/Kudu-HelloWorldWebApp.fsproj
+++ b/Kudu-HelloWorld/Kudu-HelloWorldWebApp/Kudu-HelloWorldWebApp.fsproj
@@ -37,9 +37,7 @@
     <Reference Include="EntityFramework">
       <HintPath>..\..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Entity" />
