--- a/Kudu-HelloWorld/Kudu-HelloWorldWeb/Web.config
+++ b/Kudu-HelloWorld/Kudu-HelloWorldWeb/Web.config
@@ -11,9 +11,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
-        <add assembly="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
@@ -23,7 +23,6 @@
     </authentication>
     <pages>
       <namespaces>
-        <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
